--- a/wx_Client/pages/senMessage/senMessage.wxml
+++ b/wx_Client/pages/senMessage/senMessage.wxml
@@ -1,37 +1,19 @@
-<!--pages/senMessage/senMessage.wxml-->
-<van-cell-group>
+<wux-calendar id="wux-calendar" />
 
-  <van-field
-    value="{{ username }}"
-    required
-    clearable
-    label="用户名"
-    icon="question-o"
-    placeholder="请输入用户名"
-    bind:click-icon="onClickIcon"
-  />
-
-  <van-field
-    value="{{ message }}"
-    label="留言"
-    type="textarea"
-    placeholder="请输入留言"
-    autosize
-    border="{{ false }}"
-  />
-    <van-field
-    value="{{ username }}"
-    required
-    clearable
-    label="用户名"
-    icon="question-o"
-    placeholder="请输入用户名"
-    bind:click-icon="onClickIcon"
-  />
-  
-</van-cell-group>
-<van-divider />
-<van-cell title="展示弹出层" is-link bind:click="showPopup" />
+<view class="page">
+    <view class="page__hd">
+        <view class="page__title">Calendar</view>
+        <view class="page__desc">日历</view>
+    </view>
+    <view class="page__bd">
+        <wux-cell-group title="Calendar">
+            <wux-cell title="单选" extra="{{ value1 }}" bind:click="openCalendar1"></wux-cell>
+            <wux-cell title="多选" extra="{{ value2 }}" bind:click="openCalendar2"></wux-cell>
+            <wux-cell title="Direction = Vertical" extra="{{ value3 }}" bind:click="openCalendar3"></wux-cell>
+            <wux-cell title="MinDate & MaxDate" extra="{{ value4 }}" bind:click="openCalendar4"></wux-cell>
+        </wux-cell-group>
+    </view>
+</view>
 
 
 
