--- a/wx_Client/pages/senMessage/senMessage.wxml
+++ b/wx_Client/pages/senMessage/senMessage.wxml
@@ -1,19 +1,81 @@
-<wux-calendar id="wux-calendar" />
-
-<view class="page">
-    <view class="page__hd">
-        <view class="page__title">Calendar</view>
-        <view class="page__desc">日历</view>
-    </view>
-    <view class="page__bd">
-        <wux-cell-group title="Calendar">
-            <wux-cell title="单选" extra="{{ value1 }}" bind:click="openCalendar1"></wux-cell>
-            <wux-cell title="多选" extra="{{ value2 }}" bind:click="openCalendar2"></wux-cell>
-            <wux-cell title="Direction = Vertical" extra="{{ value3 }}" bind:click="openCalendar3"></wux-cell>
-            <wux-cell title="MinDate & MaxDate" extra="{{ value4 }}" bind:click="openCalendar4"></wux-cell>
-        </wux-cell-group>
-    </view>
-</view>
+<van-dialog id="van-dialog" />
 
 
+<van-nav-bar
+  title="发布通知"
+/>
+<van-cell-group>
+  <van-field
+    value="{{title}}"
+    required
+    clearable
+    label="标题"
+    icon="question-o"
+    placeholder="请输入标题"
+    bind:click-icon="onClickIcon"
+    bind:input = "titleInput"
+  />
+  </van-cell-group>
 
+<van-cell-group size ="large">
+  <van-field
+    value="{{content}}"
+    label="内容"
+    type="textarea"
+    placeholder="请输入通知详细内容"
+    autosize
+    bind:change="contentInput"
+    
+  />
+</van-cell-group>
+  
+<van-cell-group>
+<van-cell title="选择开始时间" is-link bind:click="showPopup" />
+
+<van-popup show="{{ show }}" bind:close="onClose" position="bottom" custom-style="height: 60%;">
+      <van-datetime-picker
+      type="datetime"
+      value="{{ currentDate }}"
+      min-date="{{ minDate }}"
+      max-date="{{ maxDate }}"
+      bind:input="onInput"
+      bind:confirm="onStartSuccess"
+      bind:cancel = "onClose"
+    />
+</van-popup>
+
+    <van-field
+    value="{{ starttime }}"
+    clearable
+    placeholder="                       请选择时间"
+  />
+
+
+  <van-cell title="选择截止时间" is-link bind:click="showPopup" />
+    <van-popup show="{{ show }}" bind:close="onClose"  position="bottom" custom-style="height: 60%;">
+    <van-datetime-picker
+      title = "年 月 日 时 分"
+      type="datetime"
+      value="{{ currentDate }}"
+      min-date="{{ minDate }}"
+      max-date="{{ maxDate }}"
+      bind:input="onInput"
+      bind:confirm="onEndSuccess"
+      bind:cancel = "onClose"
+      bind:change ="getValues"
+    />
+</van-popup>
+    <van-field
+    value="{{ endtime }}"
+    clearable
+    placeholder="                       请选择时间"
+  />
+</van-cell-group>
+
+
+<van-row >
+  <van-col span="12" offset="6"> <van-button round type="info" size= 'large' bind:click="push">发送通知</van-button> </van-col>
+</van-row>
+
+
+<van-dialog id="van-dialog" />
